--- a/.gitignore
+++ b/.gitignore
@@ -23,12 +23,6 @@
 hs_err_pid*
 replay_pid*
 
-HELP.md
-target/
-.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-
 ### STS ###
 .apt_generated
 .classpath
@@ -56,3 +50,12 @@ build/
 
 ### VS Code ###
 .vscode/
+
+.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+target/
+
+HELP.md
+/.env
