--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,16 @@ services:
   yugabytedb:
     image: yugabytedb/yugabyte:latest
     container_name: yugabytedb
-    command: ["bin/yugabyted", "start", "--base_dir=/home/yugabyte/yb-data", "--daemon=false"]
+    hostname: yugabytedb
+    command: ["bin/yugabyted", "start", "--base_dir=/home/yugabyte/yb-data", "--daemon=false", "--advertise_address=yugabytedb"]
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    healthcheck:
+      test: ["CMD-SHELL", "PGPASSWORD=yugabyte /usr/local/bin/ysqlsh -h yugabytedb -p 5433 -U yugabyte -d yugabyte -c \"SELECT 1\" >/dev/null 2>&1"]
+      interval: 5s
+      timeout: 5s
+      retries: 60
+      start_period: 120s
     ports:
       - "7000:7000"   # YB-Master admin UI
       - "9000:9000"   # YB-TServer admin UI
