Feat: Implement database-free testing strategy with Spring Boot 4 compatibility
- Add spring-boot-starter-webflux-test dependency for proper WebFlux testing
- Create TransactionServiceTest with pure unit tests using MockitoExtension
- Refactor TransactionControllerIntegrationTest from @SpringBootTest to @WebFluxTest
- Update Spring Boot 4 package imports for test annotations
- Remove database dependency from Spring7ReactiveApplicationTests
- Add proper test separation: unit, slice, and integration tests
- Fix test method signatures to match TransactionService API
- Improve test execution speed by 36% (8.8s vs 13.8s)

Testing strategy now provides:
- Pure unit tests: Fast business logic validation without Spring context
- WebFlux slice tests: HTTP contracts without full application context
- Integration tests: Full WebFlux runtime with mocked dependencies
- All tests run without requiring YugabyteDB connection

This enables CI/CD pipelines to run tests without external database dependencies
while maintaining comprehensive test coverage across all application layers.

--- a/pom.xml
+++ b/pom.xml
@@ -89,9 +89,38 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-test-autoconfigure</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<!-- Test Dependencies for Database-Free Testing Strategy -->
+		
+		<!-- Reactor Test: Provides StepVerifier for testing reactive streams -->
+		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		
+		<!-- Spring Boot WebFlux Test: Provides @WebFluxTest and WebTestClient for slice testing -->
+		<!-- Enables fast HTTP contract testing without full application context -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webflux-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- Byte Buddy Agent: Required for Mockito dynamic proxy generation in Java 21+ -->
+		<!-- Resolves "Mockito/ByteBuddy dynamic agent warning" in test output -->
 		<dependency>
 			<groupId>net.bytebuddy</groupId>
 			<artifactId>byte-buddy-agent</artifactId>
